# fintrid

./: .gitignore  LICENSE  README.md
backend/: .gitignore  README.md  fees.db  pyproject.toml  requirements.txt  run_ui.py
backend/src/fintrid_backend/: __init__.py  app.py  generate_trid_curated_report.py  main.py  settings.py  streamlit_app.py  workflow.py
frontend/: package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/api/pdf-viewer/: route.ts
frontend/src/app/api/trid-records/: route.ts
frontend/src/app/api/upload/: route.ts
frontend/src/app/data/: page.tsx
frontend/src/app/pdf-report/: page.tsx
frontend/src/components/: financial-summary-card.tsx
frontend/src/components/handsontable/: cell-renderers.tsx  trid-table.tsx
frontend/src/components/ui/: card.tsx  file-upload.tsx  simple-table.tsx
frontend/src/db/: index.ts  schema.ts
frontend/src/lib/: ai-trid-transformer.ts  formatters.ts  trid-data.ts  trid-rules.ts  trid-transformer.ts
frontend/src/types/: backend.ts  trid.ts
